--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           <a href="https://github.com/your-repo/project2" target="_blank">GitHub Link</a>
         </div>
       </div>
+      <div class="project-card">
+        <div class="project-content">
+          <h3>Project 3
+            <p>description </p>
+          </h3>
+        </div>
+      </div>
+      
       <!-- Add more projects as needed -->
     </div>
   </section>
@@ -65,6 +73,14 @@
                 <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z"></path>
 
             </svg>
+        </a>
+      </li>
+      <li class="Telegram">
+        <a href="https://t.me/Shakhee7" target="" title="Telegram">
+          <svg fill="currentColor"  viewBox="0 0 24 24" class="icon" aria-hidden="false"    xmlns="http://www.w3.org/2000/svg">
+            <path d="M11.99432,2a10,10,0,1,0,10,10A9.99917,9.99917,0,0,0,11.99432,2Zm3.17951,15.15247a.70547.70547,0,0,1-1.002.3515l-2.71467-2.10938L9.71484,17.002a.29969.29969,0,0,1-.285.03894l.334-2.98846.01069.00848.00683-.059s4.885-4.44751,5.084-4.637c.20147-.189.135-.23.135-.23.01147-.23053-.36152,0-.36152,0L8.16632,13.299l-2.69549-.918s-.414-.1485-.453-.475c-.041-.324.46649-.5.46649-.5l10.717-4.25751s.881-.39252.881.25751Z"/></svg>
+          
+
         </a>
       </li>
       <!-- Add more icons (e.g., Twitter, LinkedIn) if needed -->
