--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="project-content">
           <h3>Mystery World Game</h3>
           <p>Mystery World Game.</p>
-          <a href="https://github.com/your-repo/project2" target="_blank">GitHub Link</a>
+          <a href="https://github.com/shahramhal/MysteryWorld" target="_blank">GitHub Link</a>
         </div>
       </div>
       <div class="project-card">
