--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       </div>
       <div class="project-card">
         <div class="project-content">
-          <h3>Project 3
-            <p>description </p>
-          </h3>
+          <h3>Weather App</h3>
+            <p>small Java-based app , which fetch API from OpenWeather website and displays in interface</p>
+            <a href="https://github.com/shahramhal/Weather-Application" target="_blank">GitHub Link></a>
         </div>
       </div>
       
