--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="project-card">
         <div class="project-content">
           <h3>Weather App</h3>
-            <p>small Java-based app , which fetch API from OpenWeather website and displays in interface</p>
+            <p>Small Java-based app , which fetch API from OpenWeather website and displays in interface</p>
             <a href="https://github.com/shahramhal/Weather-Application" target="_blank">GitHub Link></a>
         </div>
       </div>
