--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="project-content">
           <h3>Weather App</h3>
             <p>Small Java-based app , which fetch API from OpenWeather website and displays in interface</p>
-            <a href="https://github.com/shahramhal/Weather-Application" target="_blank">GitHub Link></a>
+            <a href="https://github.com/shahramhal/Weather-Application" target="_blank">GitHub Link </a>
         </div>
       </div>
       
