added the SKY project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <div class="project-card">
         <div class="project-content">
           <h3>SKY Score</h3>
-            <p>SkyScore is a **Django-based web application** developed for SKY's Engineering Department to modernize their "Squad Health Check" process. It replaces error-prone spreadsheets with an interactive system for tracking team health metrics (e.g., code quality, release processes) using Spotify's traffic light model (🟢 Green, 🟠 Amber, 🔴 Red). </p>
+            <p>SkyScore is a Django-based web application developed for 
+              SKY's Engineering Department to modernize their "Squad Health Check" process. </p>
             <a href="https://github.com/shahramhal/SkyScore" target="_blank">GitHub Link </a>
         </div>
       
