added the DiceGame

--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
               SKY's Engineering Department to modernize their "Squad Health Check" process. </p>
             <a href="https://github.com/shahramhal/SkyScore" target="_blank">GitHub Link </a>
         </div>
-      
-      
-    </div>
+     </div>
+     <div class="project-card">
+        <div class="project-content">
+          <h3>DiceGame</h3>
+            <p>A Kotlin-based Android dice game application ,
+               implementing a competitive game between a human player and computer AI. </p>
+            <a href="https://github.com/shahramhal/DiceGame" target="_blank">GitHub Link </a>
+        </div>
   </section>
 
   <!-- Footer -->
